2008-01-30  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Removed the option served_hosts in mod_pubsub
	because it does not work correctly yet (EJAB-504)
	* doc/guide.html: Likewise

	* src/mod_echo.erl: Put in comments the call to the educational
	function do_client_version

2008-01-29  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: MUC kicks a participant if sends a
	private message with type=error (EJAB-496)

2008-01-25  Badlop  <badlop@process-one.net>

	* doc/introduction.tex: Updated list of languages
	* doc/release_notes_2.0.0.txt: Likewise

	* src/msgs/eo.msg: New Esperanto translation (thanks to Andreas
	van Cranenburgh)

	* src/msgs/no.msg: New Norwegian translation (thanks to Stian
	B. Barmen)

	* doc/Makefile: Fixed small problem with contributed_modules.tex

2008-01-25  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Setting boolean node configuration
	fixed (EJAB-509)
	* src/mod_pubsub/node_default.erl: Use roster_groups_allowed instead
	of access_roster_groups (EJAB-508)
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise

2008-01-16  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Updated the names of log files.
	* doc/guide.html: Likewise

	* src/mod_muc/mod_muc_room.erl: Added log messages for room
	destroy

	* src/mod_caps.erl: Small beautify of log error messages

2008-01-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improved the documentation of Binary
	installer. Updated the requirements, specifically: Erlang R10B-9
	is required as minimum, and R12 is not yet supported. Added
	section Upgrading ejabberd. Improved documentation about Erlang
	runtime system environment variables and command-line parameters.
	* doc/guide.html: Likewise
